adding qrc file

--- a/AddingAudio.ui
+++ b/AddingAudio.ui
@@ -300,8 +300,8 @@ border-style: solid;
     <string>Browse...</string>
    </property>
    <property name="icon">
-    <iconset>
-     <normaloff>:/Images/browse20.png</normaloff>:/Images/browse20.png</iconset>
+    <iconset resource="SkinRessource.qrc">
+     <normaloff>:/graphic/browse20.png</normaloff>:/graphic/browse20.png</iconset>
    </property>
    <property name="iconSize">
     <size>
@@ -323,7 +323,6 @@ border-style: solid;
     <font>
      <family>Ubuntu</family>
      <pointsize>22</pointsize>
-     <weight>50</weight>
      <italic>false</italic>
      <bold>false</bold>
     </font>
@@ -722,8 +721,8 @@ border-style: solid;
     <string>Add</string>
    </property>
    <property name="icon">
-    <iconset>
-     <normaloff>:/Images/plus20.png</normaloff>:/Images/plus20.png</iconset>
+    <iconset resource="SkinRessource.qrc">
+     <normaloff>:/graphic/plus20.png</normaloff>:/graphic/plus20.png</iconset>
    </property>
    <property name="iconSize">
     <size>
@@ -748,11 +747,13 @@ border-style: solid;
     <string>Close</string>
    </property>
    <property name="icon">
-    <iconset>
-     <normaloff>:/Images/exit20.png</normaloff>:/Images/exit20.png</iconset>
+    <iconset resource="SkinRessource.qrc">
+     <normaloff>:/graphic/remove20.png</normaloff>:/graphic/remove20.png</iconset>
    </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="SkinRessource.qrc"/>
+ </resources>
  <connections/>
 </ui>
