--- a/progress.ui
+++ b/progress.ui
@@ -64,7 +64,6 @@ QLabel {
    <property name="font">
     <font>
      <pointsize>-1</pointsize>
-     <weight>75</weight>
      <italic>false</italic>
      <bold>true</bold>
      <kerning>true</kerning>
@@ -96,9 +95,9 @@ QLabel {
     <font>
      <family>Ubuntu</family>
      <pointsize>26</pointsize>
-     <weight>50</weight>
      <italic>false</italic>
      <bold>false</bold>
+     <kerning>true</kerning>
     </font>
    </property>
    <property name="styleSheet">
@@ -137,7 +136,7 @@ QLabel {
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="SkinRessource.qrc">:/Images/file32x32.png</pixmap>
+    <pixmap>:/Images/file32x32.png</pixmap>
    </property>
   </widget>
   <widget class="QProgressBar" name="progressBar_2">
@@ -158,7 +157,6 @@ QLabel {
    <property name="font">
     <font>
      <pointsize>-1</pointsize>
-     <weight>75</weight>
      <italic>false</italic>
      <bold>true</bold>
     </font>
@@ -197,8 +195,6 @@ QLabel {
    </property>
   </widget>
  </widget>
- <resources>
-  <include location="SkinRessource.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
