--- a/AddingImage.ui
+++ b/AddingImage.ui
@@ -51,7 +51,6 @@ QComboBox::drop-down {
     border-bottom-right-radius: 3px;
 }
 
-
 QPushButton {
 color: white;
 background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1,  stop: 0 #6B82AC, stop: 0.49 #566D97, stop: 0.5 #445B85, stop: 1 #566D97);
@@ -403,8 +402,8 @@ border-style: solid;
      <string>RGB565</string>
     </property>
     <property name="icon">
-     <iconset>
-      <normaloff>:/Images/rgb20.png</normaloff>:/Images/rgb20.png</iconset>
+     <iconset resource="SkinRessource.qrc">
+      <normaloff>:/graphic/rgb20.png</normaloff>:/graphic/rgb20.png</iconset>
     </property>
    </item>
    <item>
@@ -412,8 +411,8 @@ border-style: solid;
      <string>ARGB8888</string>
     </property>
     <property name="icon">
-     <iconset>
-      <normaloff>:/Images/argb20.png</normaloff>:/Images/argb20.png</iconset>
+     <iconset resource="SkinRessource.qrc">
+      <normaloff>:/graphic/argb20.png</normaloff>:/graphic/argb20.png</iconset>
     </property>
    </item>
   </widget>
@@ -481,8 +480,8 @@ border-style: solid;
      <string>None</string>
     </property>
     <property name="icon">
-     <iconset>
-      <normaloff>:/Images/none20.png</normaloff>:/Images/none20.png</iconset>
+     <iconset resource="SkinRessource.qrc">
+      <normaloff>:/graphic/none20.png</normaloff>:/graphic/none20.png</iconset>
     </property>
    </item>
    <item>
@@ -490,8 +489,8 @@ border-style: solid;
      <string>Scale to fit</string>
     </property>
     <property name="icon">
-     <iconset>
-      <normaloff>:/Images/ScaleFit20.png</normaloff>:/Images/ScaleFit20.png</iconset>
+     <iconset resource="SkinRessource.qrc">
+      <normaloff>:/graphic/ScaleFit20.png</normaloff>:/graphic/ScaleFit20.png</iconset>
     </property>
    </item>
    <item>
@@ -499,8 +498,8 @@ border-style: solid;
      <string>Scale to width</string>
     </property>
     <property name="icon">
-     <iconset>
-      <normaloff>:/Images/ScaleWidth20.png</normaloff>:/Images/ScaleWidth20.png</iconset>
+     <iconset resource="SkinRessource.qrc">
+      <normaloff>:/graphic/ScaleWidth20.png</normaloff>:/graphic/ScaleWidth20.png</iconset>
     </property>
    </item>
    <item>
@@ -508,8 +507,8 @@ border-style: solid;
      <string>Scale to height</string>
     </property>
     <property name="icon">
-     <iconset>
-      <normaloff>:/Images/ScaleHeight20.png</normaloff>:/Images/ScaleHeight20.png</iconset>
+     <iconset resource="SkinRessource.qrc">
+      <normaloff>:/graphic/ScaleHeight20.png</normaloff>:/graphic/ScaleHeight20.png</iconset>
     </property>
    </item>
   </widget>
@@ -833,9 +832,9 @@ border-style: solid;
   <widget class="QSlider" name="loadCheckerBoardSlider">
    <property name="geometry">
     <rect>
-     <x>940</x>
-     <y>430</y>
-     <width>171</width>
+     <x>960</x>
+     <y>420</y>
+     <width>160</width>
      <height>22</height>
     </rect>
    </property>
